[package]
name = "rhxn"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1"
askama = "0.15.1"
moka = { version = "0.12", features = ["sync"] }
axum = "0.8.8"
futures = "0.3.31"
reqwest = {version = "0.13.1", features = ["json"]}
serde = {version = "1.0.228",  features = ["derive"]}
serde_json = "1.0.148"
tokio = { features = ["full"], version = "1.48.0" }
tower = { features = ["util"], version = "0.5.2" }
tower-http = { version = "0.6.8", features = ["fs", "trace", "compression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
timeago = { version = "0.5.0", features = []}

[profile.release]
lto = "thin"
